# adacs_template_python_base

./: .coverage  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  Dockerfile  LICENSE  Makefile  README.md  cookiecutter.json  cookiecutter.old.json  pyproject.toml
.github/workflows/: bump.yml  publish.yml  pull_request.yml
.ropeproject/: autoimport.db
docs/: .gitignore  Makefile  conf.py  getting_started.md  index.rst
docs/_templates/: conf.py_t  root_doc.rst_t
docs/content/: common_gotchas.md  configuring_services.md  development_guidelines.md  getting_started.md  index.rst  notes_for_developers.md  template_maintenance.md
hooks/: post_gen_project.py  pre_gen_project.py
local_extensions/: __init__.py
tests/: test_bake_project.py  test_template.py  utils.py
{{cookiecutter.__project_slug}}/: .pre-commit-config.yaml  INSTRUCTIONS.template  LICENSE  Makefile  README.md  pyproject.toml  {{".gitignore"}}
{{cookiecutter.__project_slug}}/.github/workflows/: publish.yml  pull_request.yml
{{cookiecutter.__project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.__project_slug}}/docs/_apidoc/: .gitignore
{{cookiecutter.__project_slug}}/docs/_templates/: root_doc.rst_t  toc.rst_t
{{cookiecutter.__project_slug}}/docs/content/: cli.rst  getting_started.md
{{cookiecutter.__project_slug}}/python/{{cookiecutter.__package_name}}/: __init__.py  cli.py  exceptions.py  files.py  lines.py  my_module.py
{{cookiecutter.__project_slug}}/python/{{cookiecutter.__package_name}}/tests/: test_cli.py  test_cli_files.py  test_cli_my_module.py  test_files.py  test_lines.py  test_my_module.py
{{cookiecutter.github_repo}}/: INSTRUCTIONS.template  pyproject.toml  {{".gitignore"}}
{{cookiecutter.github_repo}}/docs/content/: notes_for_developers.md
{{cookiecutter.github_repo}}/python/{{cookiecutter.__package_name}}/: cli.py
{{cookiecutter.name_project}}/: LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.name_project}}/.github/workflows/: bump.yml  publish.yml  pull_request.yml
{{cookiecutter.name_project}}/docs/_templates/: conf.py_t  package.rst_t
{{cookiecutter.name_project}}/docs/content/: .gitignore  cli.rst  getting_started.md  notes_for_developers.md
{{cookiecutter.name_project}}/python/{{cookiecutter.name_package}}/: __init__.py  cli.py  exceptions.py  my_module.py
{{cookiecutter.name_project}}/python/{{cookiecutter.name_package}}/tests/: test_cli.py  test_cli_my_module.py  test_my_module.py
{{cookiecutter.name_project}}/python/{{cookiecutter.name_package}}/tests/resources/: .gitignore
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  .readthedocs.yml  INSTRUCTIONS.template  pyproject.toml
{{cookiecutter.repo_name}}/.github/: pull_request_template.md
{{cookiecutter.repo_name}}/.github/workflows/: bump.yml  publish.yml  pull_request.yml
{{cookiecutter.repo_name}}/docs/: Makefile  conf.py  index.rst
{{cookiecutter.repo_name}}/docs/content/: getting_started.md  notes_for_developers.md
{{cookiecutter.repo_name}}/python/{{cookiecutter.__package_name}}/tests/: test_base_exception.py
