[tool.poetry]
name = "adacs_python_template"
version = "0.0.0-dev" # Just a place holder; package version is managed by the dynamic-versioning plugin & git tags
description = "A Cookiecutter template for generating python projects"
authors = [ "ADACS" ]
license = "MIT-expat"
readme = "README.md"
packages = [ ]
homepage = "https://github.com/gbpoole/adacs_python_template"
documentation = "https://adacs_python_template.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = " >=3.11"
click = "^8.1.3"
Sphinx = { version = "^6.1.3", optional = true }
sphinx-rtd-theme = { version = "1.2.0", optional = true }
myst-parser = { version = "^1.0.0", optional = true }
pre-commit = { version = "^3.0.4", optional = true }
pytest = { version = "^7.0", optional = true }
black = { version = "^22.10.0", optional = true }
ruff = { version = "^0.0.243", optional = true}
sphinx-click = { version = "^4.4.0", optional = true }
mypy = { version = "^1.1.1", optional = true }
sphinx-copybutton = { version = "^0.5.1", optional = true }
pytest-mock = "^3.11.1"

[tool.poetry.extras]
docs = [
   "Sphinx",
   "sphinx-rtd-theme",
   "myst-parser",
   "sphinx-click",
   "sphinx-copybutton",
]
dev = ["pre-commit",
       "pytest",
       "mypy",
       "black",
       "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["./tests", "./"] # relative to root directory
addopts = "--ignore={{cookiecutter.__project_slug}}"

# This configures the Poetry plugin which enables dynamic versioning via the repo tags
# Note the changes that are also needed to the [build-system] config below.
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.mypy]
ignore_missing_imports = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/tests"

[tool.ruff]
line-length = 88 # to match Black
select = [
    "E",
    "F",
    "W",
]
ignore = [
    "E501", # line length violations (let Black handle this)
]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
