[tool.poetry]
name = "adacs_template_python_base"
version = "0.0.0-dev" # Just a place holder; package version is managed by the dynamic-versioning plugin & git tags
description = "A Cookiecutter template for instantiating Python projects"
authors = [ "ADACS" ]
license = "MIT-expat"
readme = "README.md"
packages = [
    { include = "adacs_template_python_base", from = "python" }
]
homepage = "https://github.com/ADACS-Australia/adacs_template_python_base"
documentation = "https://adacs_template_python_base.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = " >=3.11"
Sphinx = { version = "^6", optional = true }
sphinx-rtd-theme = { version = "^1", optional = true }
sphinx-click = { version = "^4", optional = true }
sphinx-copybutton = { version = "^0", optional = true }
myst-parser = { version = "^1", optional = true }
pytest = { version = "^7", optional = true }
pytest-mock = { version = "^3", optional = true }
pytest-cookies = { version = "^0", optional = true }
black = { version = "^24", optional = true }
ruff = { version = "^0", optional = true}
mypy = { version = "^1", optional = true }
pre-commit = { version = "^3", optional = true }
click = "^8"
rich = "^13"
cookiecutter = "^2"

[tool.poetry.extras]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinx-click",
    "sphinx-copybutton",
    "myst-parser",
]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cookies",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.pytest.ini_options]
pythonpath = ["./tests", "./"] # relative to root directory
addopts = "--ignore={{cookiecutter.repo_name}}"

# This configures the Poetry plugin which enables dynamic versioning via the repo tags
# Note the changes that are also needed to the [build-system] config below.
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.mypy]
ignore_missing_imports = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/tests"

[tool.black]
extend-exclude = '''
^/(
    {{cookiecutter.repo_name}} # checked by pytest
  | hooks                      # These files are treated as Jinja2 templates and may have invalid Python code
)
'''

[tool.ruff]
line-length = 88 # to match Black
extend-exclude = [
  '\{\{cookiecutter.repo_name\}\}', # checked by pytest
  'hooks' # These files are treated as Jinja2 templates and may have invalid Python code
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
]
ignore = [
    "E501", # line length violations (let Black handle this)
]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
