[tool.poetry]
name = "{{cookiecutter.__package_name}}"
version = "0.0.0-dev" # Just a place holder; package version is managed by the dynamic-versioning plugin & git tags
description = "{{cookiecutter.description}}"
authors = [ "{{cookiecutter.author | escape_quotes}}" ]
license = "MIT-expat"
readme = "README.md"
packages = [
    { include = "{{cookiecutter.__package_name}}", from = "python" }
]
homepage = "https://github.com/{{cookiecutter.github_login}}/{{cookiecutter.repo_name}}"
documentation = "https://{{cookiecutter.rtd_project_name}}.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = " >=3.11"
Sphinx = { version = "^6", optional = true }
sphinx-rtd-theme = { version = "^1", optional = true }
sphinx-click = { version = "^4", optional = true }
sphinx-copybutton = { version = "^0", optional = true }
myst-parser = { version = "^1", optional = true }
pytest = { version = "^7", optional = true }
pytest-mock = { version = "^3", optional = true }
pytest-cookies = { version = "^0", optional = true }
black = { version = "^24", optional = true }
ruff = { version = "^0", optional = true}
mypy = { version = "^1", optional = true }
pre-commit = { version = "^3", optional = true }

[tool.poetry.extras]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinx-click",
    "sphinx-copybutton",
    "myst-parser",
]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cookies",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.pytest.ini_options]
addopts = "--cov"
pythonpath = "./python" # relative to root directory
# Uncomment and edit the following line to add custom markers to your tests
# These can be run with the following (for example):
#
#   $ pytest -m marker_name
#
#markers = [ "marker_name: A short description of the marker" ]

# This configures the Poetry plugin which enables dynamic versioning via the repo tags
# Note the changes that are also needed to the [build-system] config below.
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.mypy]
ignore_missing_imports = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/python"

[tool.coverage.paths]
source = ["python"]

[tool.coverage.run]
branch = true
source = ["python"]
omit = ["python/{{cookiecutter.__package_name}}/tests/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:"
]

[tool.ruff]
line-length = 88 # to match Black

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
]
ignore = [
    "E501", # line length violations (let Black handle this)
]


# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
